added stylesheet sections

--- a/style.css
+++ b/style.css
@@ -29,4 +29,18 @@
     background-color: #84a1e1;
   }
 
+
+
+
+
 /* homepage.html styles*/
+/* homepage.html styles*/
+
+/* iridescencereview.html styles*/
+/* iridescencereview.html styles*/
+
+/* eitherorreview.html styles*/
+/* eitherorreview.html styles*/
+
+/* quickreviews.html styles*/
+/* quickreviews.html styles*/
