--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     color: #ffffff;
   }
 
+  a:hover {
+
+  }
+
+  @font-face {
+    font-family: 'PT Sans', sans-serif;
+  }
+
 
 /* general styles*/
 
@@ -25,7 +33,8 @@
 
   .navbar a {
     float: left;
-    padding-left: 150px;
+    padding-left: 100px;
+    padding-right:100px;
   }
 
   .navlink {
