--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
 
+/* type selectors*/
   hr {
     color: #ffffff;
   }
 
+  ol {
+    color: #000066;
+  }
+
+  
+/* type selectors*/
+
+
+/* pseudo-classes*/
   a:hover {
     color: #00ffff;
   }
 
-  a:visited {
-    color: purple;
+  .navlink:hover {
+    background-color: #84a1e1;
   }
 
   a:active {
     position: relative;
-    top: 2px;
+    top: 1px;
   }
+/* pseudo-classes*/
 
+
+/* attribute selectors*/
   table[attr="qrtab"] {
     width: 80%;
     table-layout: fixed;
@@ -28,11 +41,17 @@
   h4[attr="score"] {
     font-style: bold;
   }
+/* attribute selectors*/
 
+
+/* universal selector*/
   * {
     font-family: Arial;
   }
+/* universal selector*/
 
+
+/* id selectors*/
   #page {
     background-color: #98b1e6;
   }
@@ -45,7 +64,10 @@
     text-align: center;
     font-weight; 3;
   }
+/* id selectors*/
 
+
+/* class selectors*/
   .navbar {
     list-style-type: none;
     margin: 0;
@@ -54,23 +76,77 @@
     background-color: #3366cc;
   }
 
-  .navbar a {
-    float: left;
-    padding-left: 100px;
-    padding-right:100px;
-  }
-
   .navlink {
     display: block;
     color: white;
     padding: 14px 16px;
     text-align: center;
   }
+/* class selectors*/
 
-  .navlink:hover {
-    background-color: #84a1e1;
-  }
 
+/* combinators*/
   td h4 {
     text-align: left;
   }
+
+  .navbar a {
+    float: left;
+    padding-left: 100px;
+    padding-right:100px;
+  }
+
+  body #qrcontent {
+    color: #000066;
+  }
+
+
+/* combinators*/
+
+
+/* image dimensions*/
+  #hpimg {
+    width: 400px;
+    height: 400px;
+  }
+
+  #irdimg {
+    width: 300px;
+    height: 300px;
+  }
+
+  #eoimg {
+    width: 300px;
+    height: 300px;
+  }
+
+  #irimg {
+    height: 200px;
+    width: 200px;
+    border: 5px;
+    border-style: solid;
+    border-radius: 30px;
+    border-color: #000;
+    padding: 0.45em;
+  }
+
+  #irdimg1 {
+    width: 200px;
+    height: 200px;
+    border: 5px;
+    border-style: solid;
+    border-radius: 30px;
+    border-color: #000066;
+    padding: 0.45em;
+  }
+
+  #eoimg1 {
+    weight: 200px;
+    height: 200px;
+    border: 5px;
+    border-style: solid;
+    border-radius: 30px;
+    border-color: #4d0000;
+    padding: 0.45em;
+  }
+/* image dimensions*/
