--- a/style.css
+++ b/style.css
@@ -159,3 +159,9 @@
     font-size: 18pt;
     font-weight: 5pt;
   }
+
+  #myscore {
+    text-align: center;
+    font-weight: bold;
+    text-decoration: blue wavy underline;
+  }
